# fast-rlm

./: README.md  README2.md  RLM_LITERATURE_REVIEW.md  Recursive_Language_Models_Research_Synthesis.md  deno.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  rlm_config.yaml  sitemap.xml
benchmarks/: _harness.py  longbench_benchmark.py  niah_benchmark.py  oolong_synth_benchmark.py
docs/: local-models.md  observability.md  sandbox.md
docs/getting-started/: quickstart.md
docs/guide/: acp-agents.md  advanced.md  configuration.md
examples/: acp_smoketest.py  acp_subagent_rcount.py  local_vllm_demo.py  long_doc_qa.py  niah_demo.py
fast_rlm/: _runner.py
local-models/: index.html
observability/: index.html
rlm/: __init__.py  cli.py  clients.py  core.py  prompts.py  sandbox.py  sandbox_host.mjs  tracing.py  tui.py
sandbox/: index.html
scripts/: prefetch.sh
search/: search_index.json
src/: acp.ts  call_llm.ts  config.ts  prompt.ts  subagents.ts
tests/: _fakes.py  test_cli.py  test_clients.py  test_core_units.py  test_prompts.py  test_rlm.py  test_sandbox.py  test_sandbox_units.py  test_tracing.py  test_tui.py
