[project]
name = "rlm-engine"
version = "0.2.0"
description = "A working Recursive Language Model (RLM) engine with strict query/context separation, parallel sub-calls, and depth control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
litellm = ["litellm>=1.50"]
schema = ["jsonschema>=4"]          # enables real llm_query(schema=...) validation
tui = ["textual>=0.60"]             # trace viewer (run_tui / live_tui)
dev = ["pytest>=8", "jsonschema>=4", "litellm>=1.50", "textual>=0.60", "coverage>=7"]

[project.scripts]
rlm = "rlm.cli:main"
rlm-tui = "rlm.cli:tui_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rlm"]
